# talos-bauzil

./: CMakeLists.txt  README.md  package.xml
launch/: bauzil_include.launch  example_include.launch  example_spawn.launch  os1_64_alone.launch  os1_64_bauzil.launch  script_talos_gazebo_bauzil.launch  script_walking_bauzil.launch  talos_gazebo_bauzil.launch  talos_odometry.launch  talos_sot_odometry.launch
models/airplane_skin/: model.config  model.sdf
models/airplane_skin/meshes/: airplane-skin.dae  airplane-skin.stl
models/bauzil_room/: model.sdf
models/bauzil_room/meshes/: bauzil_room_no_floor.stl
models/bauzil_room_skins/: model.config  model.sdf
rviz/: aicp_walking.rviz  simple.rviz  talos.rviz
scripts/: start_talos_gazebo.py  start_talos_gazebo_sot.py
sdf/: bauzil_room.sdf  os_1_64.sdf
sdf/data/: bauzil_room.stl
src/: odom_sot.py  odometry.py  publisher_world.py
urdf/: os1_64.urdf.xacro  robot.urdf.xacro  talos_full_v2_ouster.urdf.xacro  talos_full_v2_sensors.urdf.xacro  talos_full_v2_sensors_1.urdf.xacro  upload.launch
urdf/head/: head_ouster.urdf.xacro
worlds/: bauzil.world  bauzil_skin_estrade.world  bauzil_skin_offices.world  bauzil_skins.world
