<?xml version="1.0"?>
<package format="2">
  <name>talos_bauzil</name>
  <version>0.0.1</version>
  <description>
    Package for the simulation of sensors in the Bauzil room (LAAS).
  </description>

  <license>TODO</license>

  <author email="tlasguigne@laas.fr">Thibaud Lasguignes</author>
  <maintainer email="tlasguigne@laas.fr">Thibaud Lasguignes</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
